# wei-bot

./: .env.example  .gitignore  MODELS.md  PLUGINS.md  README.md  TODO.md  config.example.yaml  pyproject.toml  requirements.txt
examples/hello_plugin/: hello_plugin.py  pyproject.toml
src/wechat_ai_companion/: admin.py  bot.py  config.py  llm.py  main.py  memory.py  models.py  reply_format.py  wechat_openclaw.py
src/wechat_ai_companion/plugins/: __init__.py  base.py  flow_state.py  manager.py  proactive_response.py  task_reminder.py  weather_monitor.py
tests/: test_memory.py  test_plugins.py  test_reply_format.py
weixin-ClawBot-API-main/: README.md  bot.js  bot.py  deepseek.py  dusapi.py  requirements.txt  weixin-bot-api.md  weixin-openclaw-api-py-docs.md
