[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "the-one-wechat-ai"
version = "0.1.0"
description = "A WeChat OpenClaw AI companion with persona binding and three-layer memory."
requires-python = ">=3.10"
dependencies = [
  "aiohttp>=3.9.0",
  "python-dotenv>=1.0.1",
  "PyYAML>=6.0.1",
  "qrcode[pil]>=7.4.2",
]

[project.scripts]
the-one = "wechat_ai_companion.main:main"

[tool.setuptools.packages.find]
where = ["src"]
